--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-environ = "*"
 psycopg2 = "*"
 django-heroku = "*"
 gunicorn = "*"
+pillow = "*"
+django-imagekit = "*"
 
 [requires]
 python_version = "3.8"
