--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-heroku = "*"
 gunicorn = "*"
 pillow = "*"
 django-imagekit = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.8"
