installed django-storages and boto3, set up project settings for s3 storage

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ django-imagekit = "*"
 django-allauth = "*"
 django-location-field = "*"
 django-mapbox-location-field = "*"
+boto3 = "*"
+django-storages = "*"
 
 [requires]
 python_version = "3.8"
