django filter backends installed and filter routes via api get request started

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ django-mapbox-location-field = "*"
 boto3 = "*"
 django-storages = "*"
 djangorestframework = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.8"
